[gd_scene load_steps=8 format=2]

[ext_resource path="res://ghost.gd" type="Script" id=1]
[ext_resource path="res://assets/ghost.png" type="Texture" id=2]
[ext_resource path="res://assets/ghost_afraid.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]

resource_name = "down"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_chasing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]

resource_name = "left"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_chasing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]

resource_name = "right"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_chasing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="Animation" id=1]

resource_name = "up"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_chasing:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[node name="ghost" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="sprite_chasing" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
hframes = 13
frame = 9
_sections_unfolded = [ "Animation" ]

[node name="sprite_running_away" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 3 )

[node name="animation_player" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 2.0
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]


